--- a/src/components/PostComment/PostComment.css
+++ b/src/components/PostComment/PostComment.css
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-top: 2rem;
+  padding-top: 1rem;
 }
 
 .no-comments-main span {
